# brewzy

./: .gitignore  README.md
api/: .gitignore  README.md  mix.exs
api/config/: config.exs
api/lib/: brew.ex
api/lib/brew/: application.ex
api/lib/brew/api/: api.ex
api/lib/brew/api/common/: error.ex  json.ex  response.ex
api/lib/brew/api/common/error/: error.ex  http.ex  repr.ex
api/lib/brew/api/controllers/: cask.ex  formula.ex  meta.ex
api/lib/brew/api/models/: base.ex  formula.ex  meta.ex
api/lib/brew/cache/: cache.ex  casks.ex  formulae.ex
api/lib/brew/cache/ets/: formulae.ex
api/lib/brew/helpers/: getter.ex  inbound_base.ex
api/lib/brew/jobs/: job.ex
api/lib/brew/jobs/git/: job.ex  source.ex  worker.ex
api/lib/brew/jobs/syncer/: fetch.ex  job.ex
api/lib/brew/jobs/syncer/data/: formula.ex
api/lib/brew/validation/: assert_nil.ex  bool.ex  fn.ex  intbool.ex
api/test/: brew_test.exs
cli/: README.md
licenses/artichoke/: LICENSE  README.md
reverse-schema/: README.md  dump.py  main.py  pyproject.toml  schema-cask.json
reverse-schema/schema/: cask.json  formula.json
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs  main.rs  prelude.rs  test.rb
runtime/src/classes/demo/: demo.rb  mod.rs  mruby.rs
