[tool.poetry]
name = "rev"
version = "0.1.0"
description = ""
authors = ["getaddrinfo <oss@getaddrinfo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
genson = "^1.2.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
